[package]
name = "bevy-discord-presence"
description = "Discord presence plugin for the Bevy game engine"
license = "MIT"
authors = ["Juliette Cordor"]
keywords = ["discord", "rpc", "ipc"]
version = "0.4.2"
repository  = "https://github.com/jewlexx/discord-presence.git"
edition = "2021"

[dependencies]
discord-presence = { version = "0.5.17", git = "https://github.com/jewlexx/discord-presence", features = ["bevy"] }
bevy = { version = ">=0.9", default-features = false }
parking_lot = "0.12"
strum = "0.25.0"
quork = { version = "0.4.0", default-features = false, features = ["traits"] }

[dev-dependencies]
version-sync = "0.9"
