[package]
name = "bevy-discord-presence"
description = "Discord presence plugin for the Bevy game engine"
license = "MIT"
authors = ["Juliette Cordor"]
keywords = ["discord", "rpc", "ipc"]
version = "0.5.0"
repository = "https://github.com/jewlexx/discord-presence.git"
edition = "2021"

[dependencies]
discord-presence = { version = "1.0", git = "https://github.com/jewlexx/discord-presence" }
bevy = { version = ">=0.13.0", default-features = false }
parking_lot = "0.12"
quork = { version = "0.6", default-features = false, features = ["traits"] }
derive_more = "0.99"

[dev-dependencies]
version-sync = "0.9"
